k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: olcha
  labels:
    app.kubernetes.io/name: olcha
    app.kubernetes.io/part-of: olcha-platform
